# Mathness

./: .gitignore  App.cpp  App.h  CMakeLists.txt  LICENSE  Lexer.cpp  Lexer.h  ListNode.cpp  ListNode.h  Main.cpp  Mathness.sln  Mathness.vcxproj  Mathness.vcxproj.filters  MatrixNode.h  Node.h  Nodes.h  Parser.cpp  Parser.h  README.md  ScalarNode.h  SumNode.h  TODO.txt  TokenDefinitions.h  Utils.h  vcpkg-configuration.json  vcpkg.json
src/: Main.cpp
src/AST/: Node.h
src/AST/Operation Nodes/Binary/: BinaryOperations.h
src/AST/Operation Nodes/Binary/Cross/: CrossNode.cpp  CrossNode.h
src/AST/Operation Nodes/Binary/Division/: DivisionNode.cpp  DivisionNode.h
src/AST/Operation Nodes/Binary/Dot/: DotNode.cpp  DotNode.h
src/AST/Operation Nodes/Binary/Log/: LogNode.cpp  LogNode.h
src/AST/Operation Nodes/Binary/Modulus/: ModulusNode.cpp  ModulusNode.h
src/AST/Operation Nodes/Binary/Power/: PowerNode.cpp  PowerNode.h
src/AST/Operation Nodes/Binary/Product/: ProductNode.cpp  ProductNode.h
src/AST/Operation Nodes/Unary/: UnaryOperations.h
src/AST/Value Nodes/: ValueNodes.h
src/AST/Value Nodes/Identifier/: IdentifierNode.cpp  IdentifierNode.h
src/AST/Value Nodes/List/: ListNode.cpp  ListNode.h
src/AST/Value Nodes/Matrix/: MatrixNode.cpp  MatrixNode.h
src/AST/Value Nodes/Scalar/: ScalarNode.cpp  ScalarNode.h
src/App/: App.cpp  App.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Parser/: Parser.cpp  Parser.h
src/Parser/Utils/: Utils.h
src/Results/: Result.h
src/Results/List/: List.h
src/Results/Matrix/: Matrix.cpp  Matrix.h
src/Storage/: StorageHandler.cpp  StorageHandler.h
src/Utils/: TokenDefinitions.h  TypeDefinitions.h
(+40 files in other folders)
